--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Dicee</title>
+  <title>Dice Roll</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
@@ -12,7 +12,8 @@
 <body>
 
   <div class="container">
-    <h1>Refresh Me</h1>
+    <h1>Dice Roll</h1>
+    <h2>Refresh Me</h2>
 
     <div class="dice">
       <p>Player 1</p>
@@ -23,6 +24,8 @@
       <p>Player 2</p>
       <img class="img2" src="images/dice6.png">
     </div>
+
+    <h3>Refresh the page to roll agian!</h3>
 
   </div>
 
